--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -5,4 +5,4 @@
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 		<AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
 	</PropertyGroup>
-</Project>
+</Project>xdbfgh
